[INTERNAL][FIX] sap.ui.rta: Fix accessibility issues in High Contrast Themes (border thickness)
SNOW: DINC0240830

--- a/src/themelib_sap_fiori_3/src/sap/ui/rta/themes/sap_fiori_3_hcb/ChangeVisualization.less
+++ b/src/themelib_sap_fiori_3/src/sap/ui/rta/themes/sap_fiori_3_hcb/ChangeVisualization.less
@@ -9,6 +9,8 @@
 	.sapUiRtaChangeIndicatorHovered {
 		&:after {
 			box-shadow: none;
+			outline-width: 0.125rem; //2px
+			outline-offset: -0.125rem; //2px
 		}
 	}
 }
